--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@babel/polyfill": "^7.12.1",
 		"normalize.css": "^8.0.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"stable": "^0.1.8"
 	}
 }
