fix: delete build path from scripts.clear

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
 		"dev": "cross-env NODE_ENV=development webpack --config config/webpack.dev.js",
 		"prod": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-		"clear": "rd /s /q build dist"
+		"clear": "rd /s /q dist"
 	},
 	"homepage": "https://github.com/a-andrievskikh/aerounion#readme",
 	"devDependencies": {
